[WIP] change front with redux-toolkit - change back to java 17 and lombok